--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -10,5 +10,8 @@
             </nav>
         </div>
     </header>
-    <main class="mdl-layout__content" style="padding: 20px;"></main>
+    <main class="mdl-layout__content" style="padding: 20px;" *ngIf="stock">
+        <summary [stock]="stock[0]"></summary>
+
+    </main>
 </div>
