--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -3,6 +3,10 @@
         <div class="mdl-layout__header-row">
             <span class="mdl-layout-title">Notowania Giełdowe</span>
             <div class="mdl-layout-spacer"></div>
+            <span><span [innerHTML]="'dsa'|news"></span></span>
+
+
+            <div class="mdl-layout-spacer"></div>
             <nav class="mdl-navigation mdl-layout--large-screen-only">
                 <a class="mdl-navigation__link" [routerLink]="['/']">Panel kontrolny</a>
                 <a class="mdl-navigation__link" [routerLink]="['manage']">Zarządzaj</a>
