--- a/src/app/components/summary/summary.component.scss
+++ b/src/app/components/summary/summary.component.scss
@@ -3,11 +3,11 @@
 }
 
 :host .stock-card.increase {
-    background: #558b2f;
-    color: #fff
+    background: #558B2F;
+    color: #fff;
 }
 
 :host .stock-card.decrease {
-    background: #c62828;
-    color: #fff
+    background: #C62828;
+    color: #fff;
 }
